--- a/.github/workflows/ci_paper.yml
+++ b/.github/workflows/ci_paper.yml
@@ -15,7 +15,7 @@ jobs:
           uses: actions/checkout@v4.1.1
         - uses: blytkerchan/build-paper@v1
           with:
-            filename: guidelines.ipynb
+            filename: paper-v1.ipynb
             requirements-txt: paper-requirements.txt
             attachments: diagram.png
             build-pdf: true
