--- a/.github/workflows/ci_paper.yml
+++ b/.github/workflows/ci_paper.yml
@@ -1,7 +1,14 @@
-name: Build the paper
+name: Build and Deploy Paper
 on:
-    push: {}
+    push:
+        branches: [dev, main]
     workflow_dispatch: {}
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+    contents: read
+    pages: write
+    id-token: write
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,3 +26,37 @@ jobs:
             requirements-txt: paper-requirements.txt
             attachments: diagram.png
             build-pdf: true
+        - name: Upload artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: paper-output
+            path: |
+              paper-v1.html
+              paper-v1.pdf
+              diagram.png
+    
+    deploy:
+        needs: build-paper
+        runs-on: ubuntu-latest
+        if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main'
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        steps:
+        - name: Download artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: paper-output
+            path: ./public
+        - name: Create index redirect
+          run: |
+            echo '<!DOCTYPE html><html><head><meta http-equiv="refresh" content="0; url=paper-v1.html"></head><body>Redirecting to paper...</body></html>' > ./public/index.html
+        - name: Setup Pages
+          uses: actions/configure-pages@v4
+        - name: Upload to Pages
+          uses: actions/upload-pages-artifact@v3
+          with:
+            path: ./public
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v4
