--- a/.github/workflows/ci_paper.yml
+++ b/.github/workflows/ci_paper.yml
@@ -21,6 +21,7 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v4.1.1
         - uses: blytkerchan/build-paper@v1
+          continue-on-error: true
           with:
             filename: paper-v1.ipynb
             requirements-txt: paper-requirements.txt
@@ -31,7 +32,7 @@ jobs:
           with:
             name: paper-output
             path: |
-              paper-v1.html
+              _site/index.html
               paper-v1.pdf
               diagram.png
     
