--- a/.github/workflows/ci_paper.yml
+++ b/.github/workflows/ci_paper.yml
@@ -20,14 +20,18 @@ jobs:
         steps:
         - name: Checkout
           uses: actions/checkout@v4.1.1
-        - uses: blytkerchan/build-paper@v1
+        - name: Build paper
+          id: build
+          uses: blytkerchan/build-paper@v1
           continue-on-error: true
           with:
             filename: paper-v1.ipynb
             requirements-txt: paper-requirements.txt
             attachments: diagram.png
             build-pdf: true
+            publish-ghpages: false
         - name: Upload artifact
+          if: always()
           uses: actions/upload-artifact@v4
           with:
             name: paper-output
